--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         <section id="Git_komandos">
             <h1>git komandos</h1>
             <ul>
-                <li></li>
+                <li>git init - inicijuoja git repozitorija</li>
+                <li>git status - parodo git repozitorijos statusa</li>
+                <li>git add - prideti failus prie paruostu comitinimui failu</li>
+                <li>git commit -m "zinute" - sukuriama kodo versija su zinute</li>
+                <li>git restore ./*/file - panaikina pries tai comitintus pakeitimus (kurie nera addinti)</li>
+                <li>git restore --staged ./*/file - isima nurodyta faila is staged zonos</li>
+                <li>git push - nusiuncia naujus comitus i serveri</li>
+                <li>git log - rodo git comitu istorija</li>
             </ul>
         </section>
     </main>
