youtubePage html done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>git restore --staged ./*/file - isima nurodyta faila is staged zonos</li>
                 <li>git push - nusiuncia naujus comitus i serveri</li>
                 <li>git log - rodo git comitu istorija</li>
+                <li>git branch commitID - nukeliauja i nurodyta kodo versija</li>
             </ul>
         </section>
     </main>
