updated html and styled

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script/main.js" defer></script>
     <link rel="stylesheet" href="./style/main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
@@ -31,7 +32,44 @@
           </div>
     </header>
     <main>
-        <div class="side-bar">.</div>
+        <div class="side-bar">
+            <div class="nav">
+                <a class="nav-link active">
+                  <i class="material-icons">home</i>
+                  <span>Home</span>
+                </a>
+                <a class="nav-link">
+                    <i class="material-icons">local_fire_department</i>
+                    <span>Trending</span>
+                 </a>
+                 <a class="nav-link">
+                    <i class="material-icons">subscriptions</i>
+                    <span>Subscriptions</span>
+                 </a>
+            
+            <hr>
+            <a class="nav-link">
+                <i class="material-icons">library_add_check</i>
+                <span>Library</span>
+             </a>
+             <a class="nav-link">
+                <i class="material-icons">history</i>
+                <span>History</span>
+             </a>
+             <a class="nav-link">
+                <i class="material-icons">play_arrow</i>
+                <span>Your Videos</span>
+             </a>
+             <a class="nav-link">
+                <i class="material-icons">watch_later</i>
+                <span>Watch Later</span>
+             </a>
+             <a class="nav-link">
+                <i class="material-icons">thumb_up</i>
+                <span>Liked Videos</span>
+             </a>
+            </div>
+        </div>
         <div class="content">.</div>
     </main>
 </body>
